syntax = "proto3";

import "google/protobuf/timestamp.proto";

package webarchiver.crawler.v1;

service WatchersService {
  rpc ListWatchers (ListWatchersRequest) returns (ListWatchersResponse);
  rpc GetWatcher (GetWatcherRequest) returns (Watcher);
  rpc CreateWatcher (CreateWatcherRequest) returns (Watcher);
  rpc UpdateWatcher (UpdateWatcherRequest) returns (Watcher);
  rpc RunWatcher (GetWatcherRequest) returns (RunWatcherResponse);
  rpc PauseWatcher (GetWatcherRequest) returns (PauseWatcherResponse);
  rpc StopWatcher (GetWatcherRequest) returns (StopWatcherResponse);
}

message ListWatchersRequest {
  int32 page_size = 1;
  string page_token = 2;
  string order_by = 3;
}

message ListWatchersResponse {
  repeated Watcher data = 1;
  string next_page_token = 2;
}

message RunWatcherResponse {}
message PauseWatcherResponse {}
message StopWatcherResponse {}

message GetWatcherRequest {
  string id = 1;
}

message CreateWatcherRequest {
  string id = 1;
  string name = 2;
}

message UpdateWatcherRequest {
  string id = 1;
  string name = 2;
}

message Watcher {
  string id = 1;
  string name = 2;
  bool active = 3;
  google.protobuf.Timestamp created_at = 10;
  google.protobuf.Timestamp updated_at = 11;
}